articles/homelab-k8s-series/07-ingress-controller/app-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  namespace: routing-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo
          args:
            - "-text=Xin chao tu app-b"
          ports:
            - containerPort: 5678
